docs: add structure of html(Sun, Oct 17, 2021 10:55 AM)

--- a/cssMemSlider/index.html
+++ b/cssMemSlider/index.html
@@ -9,7 +9,30 @@
 </head>
 
 <body>
-
+   <div class="container">
+      <div id="slider">
+         <input checked type="radio" name="slider" id="im1">
+         <input type="radio" name="slider" id="im2">
+         <input type="radio" name="slider" id="im3">
+         <input type="radio" name="slider" id="im4">
+         <div id="slides">
+            <div id="block-overflow">
+               <div class="image">
+                  <div><img src="1.jpg"></div>
+                  <div><img src="2.jpg"></div>
+                  <div><img src="3.jpg"></div>
+                  <div><img src="4.jpg"></div>
+               </div>
+            </div>
+         </div>
+         <div id="active-controls">
+            <label for="im1"></label>
+            <label for="im2"></label>
+            <label for="im3"></label>
+            <label for="im4"></label>
+         </div>
+      </div>
+   </div>
 </body>
 
 </html>
